--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       padding: 10px 0px; color: #3d4451;}
 
     /* 加红条 */
-    nav.navMenu > ul > li.active > a::after{
+    nav.navMenu > ul > li.active > a::after, nav.navMenu > ul > li.highLight > a::after{
       content: ''; display: block; position: absolute; top: 100%; left: 0; width: 100%;
       height: 3px; background: #e06567; animation: redBar .3s;
     }
@@ -63,7 +63,7 @@
       <nav class="navMenu" style="float: right;">
         <ul class="clearfix">
           <li>
-            <a href="#siteAbout">关于</a>
+            <a href="#siteAboutSon">关于</a>
           </li>
           <li>
             <a href="#siteSkills">技能</a>
@@ -101,7 +101,7 @@
     <div class="mask"></div>
   </div>
   <main id="siteAbout">
-    <div class="userCard">
+    <div data-x id="siteAboutSon" class="userCard">
       <div class="pictureAndText clearfix">
         <div class="picture">
           <img src="./img/avatar.jpg" width=299 height=347 alt="头像">
@@ -154,21 +154,17 @@
     </p>
 
   </main>
-  <section id="siteSkills" class="skills">
+  <section data-x id="siteSkills" class="skills">
     <h2>技能</h2>
     <ol class="clearfix">
       <li>
-        <h3>
-          HTML 5 &amp; CSS 3
-        </h3>
+        <h3>HTML 5 &amp; CSS 3</h3>
         <div class="progressBar">
           <div class="progress" style="width: 10%;"></div>
         </div>
       </li>
-      <h3>
-        <li>
-          JavaScript
-        </h3>
+      <li>
+        <h3> JavaScript</h3>
         <div class="progressBar">
           <div class="progress" style="width: 20%"></div>
         </div>
@@ -207,7 +203,7 @@
       </li>
     </ol>
   </section>
-  <section id="siteWorks" class="portfolio">
+  <section data-x id="siteWorks" class="portfolio">
     <h2>作品集</h2>
     <nav>
       <ol class="clearfix">
@@ -245,15 +241,52 @@
     </div>
 
   </section>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.4.0/Tween.min.js"></script>
   <script>
     // 加载动画
     setTimeout(function(){
       loadwrap.classList.remove('active')
-    },300)
+    },10)
 
     // topNavBar-鼠标滑动动画
-    window.onscroll = function(){
+
+    // 添加 offset 类
+    let specialTags = document.querySelectorAll('[data-x]') //获取三大区域，关于 作品 博客
+    for(i=0; i<specialTags.length; i++){
+      specialTags[i].classList.add('offset')
+    }
+
+    setTimeout(function(){
+      findClosest()
+    },50)
+    
+    window.onscroll = function(x){
       window.scrollY > 0 ? topNavBar.classList.add('sticky') : topNavBar.classList.remove('sticky')
+      findClosest()
+    }
+
+    function findClosest(){
+      let specialTags = document.querySelectorAll('[data-x]') //获取三大区域，关于 作品 博客
+      let minIndex = 0
+      for(i=1; i<specialTags.length; i++){
+        if(Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minIndex].offsetTop - window.scrollY)){
+          minIndex = i
+        }
+      }
+      for(let i=0; i<specialTags.length; i++){
+        specialTags[i].classList.remove('active')
+      }
+      specialTags[minIndex].classList.add('active')
+      // 上面的一片代码，是找到离页面最近的那个元素，把其他两个干掉，给对应的那个加 active
+      specialTags[minIndex].classList.remove('offset')
+      let id = specialTags[minIndex].id
+      let a = document.querySelector('a[href="#'+ id +'"]')  // 通过 id 找 a 标签，通过 a 标签找 父元素 li ，通过 li 找同类元素，把同类其他元素干掉，只给自己 active
+      let li = a.parentNode 
+      let brothersAndMe = li.parentNode.children
+      for(let i=0; i<brothersAndMe.length; i++){
+        brothersAndMe[i].classList.remove('highLight')
+      }
+      li.classList.add('highLight')
     }
 
     // 把底部红条换一下。提示：给 li 加 active。
@@ -269,6 +302,15 @@
 
     // 给 nav > ul > li 出子菜单。已完成。
 
+    // Setup the animation loop.
+    function animate(time) {
+        requestAnimationFrame(animate);
+        TWEEN.update(time);
+    }
+    requestAnimationFrame(animate);
+
+    
+
     // 点击跳转
     let aTags = document.querySelectorAll('nav.navMenu > ul > li > a')
     for(let i=0; i<aTags.length; i++){
@@ -280,21 +322,24 @@
         let top = element.offsetTop
 
         //另
-        let n = 20
-        let t = 500 / n
         let currentTop = window.scrollY
         let targetTop = top - 80
-        let S = targetTop - currentTop
-        let s = S / n
-        let i = 0
-        let id = setInterval(()=>{
-          if(i===n){
-            window.clearInterval(id)
-            return
-          }
-          i = i + 1
-          window.scrollTo(0 , currentTop + s*i)
-        },t)
+        let s = targetTop - currentTop
+        let t = Math.abs((s/100)*300)
+        if(t > 500){
+          t = 500
+        }
+        // 以下是引入的东西
+        const coords = { y: currentTop}; 
+        const tween = new TWEEN.Tween(coords) 
+        .to({ y: targetTop}, t) 
+        .easing(TWEEN.Easing.Quadratic.InOut) 
+        // Use an easing function to make the animation smooth.
+        .onUpdate(() => { 
+          window.scrollTo(0 , coords.y)
+        })
+        .start(); // Start the tween immediately.
+
       }
     }
 
