--- a/index.html
+++ b/index.html
@@ -211,8 +211,21 @@
 	<div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
   </section>
+  
+  <section>
+	<h2 style="text-align: center;">留言</h2>
+	<ul id="messagesList"></ul>
+	<form id="leaveMessagesForm" style="width: 700px; height: 300px; margin: 20px auto; border: 1px solid red;">
+
+		<input type="text" name="content">
+		<input type="submit" value="submit">
+	</form>
+  </section>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.4.0/Tween.min.js"></script>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.15.0/dist/av-min.js"></script>
+
+  <script src="./messages.js"></script>
   <script src="./init-Swiper.js"></script>
   <script src="./topSticky.js"></script>
   <script src="./addAndRemoveOffset.js"></script>
